# clack

./: Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
common/: Cargo.toml  LICENSE-MIT  README.md
common/src/: bundle.rs  entry.rs  events.rs  extensions.rs  factory.rs  host.rs  lib.rs  plugin.rs  ports.rs  process.rs  stream.rs  utils.rs  version.rs
common/src/events/: event_match.rs  event_types.rs  header.rs  helpers.rs  io.rs  list.rs  pckn.rs  spaces.rs
common/src/events/event_types/: midi.rs  note.rs  note_expression.rs  note_mask.rs  param_value.rs  transport.rs
common/src/events/io/: batcher.rs  buffer.rs  implementation.rs  input.rs  merger.rs  output.rs
common/src/events/list/: buffer.rs  implementation.rs  input.rs  output.rs
common/src/events/spaces/: core.rs  id.rs
common/src/extensions/: log.rs  raw.rs
common/src/extensions/log/: implementation.rs
common/src/factory/: plugin.rs  raw.rs
common/src/plugin/: descriptor.rs  features.rs
common/src/process/: constant_mask.rs
common/src/utils/: color.rs  fixed_point.rs  id.rs  timestamp.rs  universal_plugin_id.rs  version.rs
examples/gain/: Cargo.toml
examples/gain/src/: lib.rs
examples/gain/tests/: test_gain.rs
extensions/: Cargo.toml  README.md
extensions/src/: __doc_utils.rs  ambisonic.rs  audio_ports.rs  audio_ports_activation.rs  audio_ports_config.rs  clap_wrapper.rs  configurable_audio_ports.rs  context_menu.rs  event_registry.rs  gui.rs  latency.rs  lib.rs  log.rs  note_name.rs  note_ports.rs  param_indication.rs  params.rs  posix_fd.rs  preset_discovery.rs  preset_load.rs  remote_controls.rs  render.rs  state.rs  state_context.rs  surround.rs  tail.rs  thread_check.rs  thread_pool.rs  timer.rs  track_info.rs  utils.rs  voice_info.rs  wrappers.rs
extensions/src/ambisonic/: host.rs  plugin.rs
extensions/src/audio_ports/: host.rs  plugin.rs
extensions/src/audio_ports_config/: host.rs  plugin.rs
extensions/src/clap_wrapper/: auv2.rs  vst3.rs
extensions/src/clap_wrapper/auv2/: host.rs  plugin.rs  sys.rs
extensions/src/clap_wrapper/vst3/: host.rs  plugin.rs  sys.rs
extensions/src/configurable_audio_ports/: host.rs  plugin.rs
extensions/src/context_menu/: builder.rs  entry.rs  host.rs  item.rs  plugin.rs
extensions/src/gui/: attached.rs  free_standing.rs  host.rs  implementation.rs  plugin.rs  window.rs
extensions/src/gui/attached/: window.rs
extensions/src/latency/: implementation.rs
extensions/src/log/: error.rs  host.rs  implementation.rs
extensions/src/note_name/: host.rs  plugin.rs
extensions/src/note_ports/: host.rs  plugin.rs
extensions/src/params/: host.rs  implementation.rs  info.rs  plugin.rs
extensions/src/preset_discovery/: data.rs  descriptor.rs  factory.rs  host.rs  plugin.rs  preset_data.rs
extensions/src/preset_discovery/factory/: host.rs  plugin.rs
extensions/src/preset_discovery/host/: extension.rs  indexer.rs  metadata_receiver.rs  provider.rs
extensions/src/preset_discovery/plugin/: extension.rs  indexer.rs  metadata_receiver.rs  provider.rs
extensions/src/state/: host.rs  plugin.rs
extensions/src/surround/: config.rs  host.rs  plugin.rs
extensions/src/wrappers/: auv2.rs  vst3.rs
finder/: Cargo.toml  README.md
finder/src/: finder.rs  lib.rs  paths.rs
host/: Cargo.toml  README.md
host/examples/cpal/: Cargo.toml  README.md
host/examples/cpal/src/: buffers.rs  discovery.rs  host.rs  main.rs  stream.rs
host/examples/discover/: Cargo.toml
host/examples/discover/src/: discovery.rs  main.rs  preset_discovery.rs
host/src/: bundle.rs  entry.rs  extensions.rs  factory.rs  host.rs  instance.rs  lib.rs  plugin.rs  plugin_descriptor.rs  process.rs  util.rs  wrapper.rs
host/src/bundle/: cache.rs  clack_plugin.rs  diva_stub.rs  entry.rs  entry_provider.rs  library.rs  loaded_entry.rs  plugin_descriptor.rs
host/src/entry/: cache.rs  descriptor.rs  entry_provider.rs  library.rs  loaded_entry.rs
host/src/extensions/: wrapper.rs
host/src/extensions/wrapper/: data.rs  descriptor.rs  instance.rs  logging.rs
host/src/factory/: plugin_descriptor.rs
host/src/host/: error.rs  extensions.rs  info.rs
host/src/instance/: channel.rs  handle.rs  processor.rs  shared.rs
host/src/instance/processor/: audio.rs  inner.rs
host/src/plugin/: error.rs  handle.rs  instance.rs
host/src/process/: audio_buffers.rs  audio_buffers_v2.rs  celled_audio_buffers.rs  into_buffers.rs
host/src/process/audio_buffers/: ports_info.rs
host/src/wrapper/: data.rs  descriptor.rs  instance.rs
host/tests/: audio_buffers.rs  call-in-destruction.rs  clack-plugin-loading.rs  drop.rs  instance.rs  loading.rs  nih-plug-background-thread.rs  nih-plug-loading.rs  reentrant-init.rs  shared-state.rs
plugin/: Cargo.toml  README.md
plugin/examples/bundle-plugins/: Cargo.toml  README.md
plugin/examples/bundle-plugins/src/: main.rs
plugin/examples/bundle-plugins/tests/: can_load_gain_plugin.rs
plugin/examples/gain/: Cargo.toml  README.md
plugin/examples/gain-gui/: Cargo.toml  README.md
plugin/examples/gain-gui/src/: audio.rs  gui.rs  lib.rs  params.rs
plugin/examples/gain-gui/tests/: test_gain.rs
plugin/examples/gain-presets/: Cargo.toml
plugin/examples/gain-presets/src/: lib.rs  params.rs  preset_discovery.rs
plugin/examples/gain-presets/tests/: test_gain.rs
plugin/examples/gain/src/: gui.rs  lib.rs  params.rs
plugin/examples/gain/tests/: test_gain.rs
plugin/examples/polysynth/: Cargo.toml  README.md
plugin/examples/polysynth/src/: lib.rs  oscillator.rs  params.rs  (+1 more)
plugin/examples/xtask/: Cargo.toml
plugin/src/: bundle.rs  entry.rs  extension.rs  extensions.rs  factory.rs  host.rs  internal_utils.rs  lib.rs  plugin.rs  process.rs
plugin/src/entry/: single.rs
plugin/src/extensions/: wrapper.rs
plugin/src/factory/: error.rs  plugin.rs  wrapper.rs
plugin/src/plugin/: descriptor.rs  error.rs  instance.rs  logging.rs  wrapper.rs
plugin/src/process/: audio.rs  celled_audio_buffers.rs  events.rs
plugin/tests/: get_extensions_in_init.rs  missing_init.rs
test-host/: Cargo.toml
test-host/src/: host.rs  lib.rs
(+57 files in other folders)
