[workspace]
resolver = "2"
members = [
    "common",
    "host",
    "plugin",
    "extensions",
    # Examples
    "host/examples/cpal",
    "plugin/examples/gain",
    "plugin/examples/polysynth",
]

[workspace.dependencies]
clack-common = { path = "./common", version = "0.1.0" }
clack-plugin = { path = "./plugin", version = "0.1.0" }
clack-host = { path = "./host", version = "0.1.0", default-features = false }
clack-extensions = { path = "./extensions", version = "0.1.0" }

clap-sys = "0.5.0"

bitflags = "2.4.2"
libloading = "0.8.1"
raw-window-handle_05 = { package = "raw-window-handle", version = "0.5.2" }
raw-window-handle_06 = { package = "raw-window-handle", version = "0.6.0" }
