[package]
name = "clack-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = { workspace = true }
bitflags = "1.3.2"

[dev-dependencies]
static_assertions = "1.1.0"