[package]
name = "clack-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
static_assertions = "1.1.0"