[package]
name = "clack-extensions"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-plugin = { workspace = true, optional = true }
clack-host = { workspace = true, optional = true, default-features = false }
clack-common = { workspace = true }
clap-sys = { workspace = true }

bitflags = { workspace = true }
raw-window-handle_05 = { workspace = true, optional = true }
raw-window-handle_06 = { workspace = true, optional = true }

[dev-dependencies]
clack-host = { workspace = true, features = ["clack-plugin"] }

[features]
all-extensions = [
    "audio-ports",
    "audio-ports-config",
    "event-registry",
    "gui",
    "latency",
    "log",
    "note-name",
    "note-ports",
    "params",
    "posix-fd",
    "render",
    "state",
    "tail",
    "thread-check",
    "thread-pool",
    "timer"
]
audio-ports = []
audio-ports-config = []
event-registry = []
gui = []
latency = []
log = []
note-name = []
note-ports = []
params = []
posix-fd = []
render = []
state = []
tail = []
thread-check = []
thread-pool = []
timer = []
voice-info = []

[lints]
workspace = true
