[package]
name = "clack-finder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
dirs = "6.0.0"
walkdir = "2.5.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSBundle", "NSURL"] }

[lints]
workspace = true
