[package]
name = "clack-host"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
clap-sys = { workspace = true }
clack-common = { workspace = true }
clack-plugin = { workspace = true, optional = true }

libloading = { workspace = true, optional = true }

[features]
default = ["libloading"]
libloading = ["dep:libloading"]
clack-plugin = ["dep:clack-plugin"]

[dev-dependencies]
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = ["clack-host", "latency", "log", "state", "timer"] }

# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs"] }
static_assertions = "1.1.0"
