[package]
name = "clack-host"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prokopyl/clack"
description = "Low-level, safe Rust wrappers to create audio plugin hosts using the CLAP audio plugin API."
categories = ["api-bindings", "multimedia::audio"]
keywords = ["clap", "audio", "plugin", "host", "bindings"]
authors = ["Adrien Prokopowicz <prokopylmc@gmail.com>"]

[dependencies]
clap-sys = { workspace = true }
clack-common = { workspace = true }
clack-plugin = { workspace = true, optional = true }

libloading = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSBundle", "NSURL"], optional = true }

[features]
default = ["libloading"]
libloading = ["dep:libloading", "dep:objc2-foundation"]
clack-plugin = ["dep:clack-plugin"]

[dev-dependencies]
clack-plugin = { workspace = true }
clack-extensions = { path = "../extensions", features = ["clack-host", "clack-plugin", "latency", "log", "state", "timer"] }
static_assertions = "1.1.0"

[lints]
workspace = true
