[package]
name = "clack-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = { workspace = true }
clack-common = { workspace = true }
ringbuf = "0.4.7"

[dev-dependencies]
clack-host = { workspace = true, default-features = false, features = ["clack-plugin"] }
clack-extensions = { workspace = true, features = ["log"] }
