[package]
name = "clack-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = { workspace = true }
clack-common = { workspace = true }

[dev-dependencies]
clack-host = { workspace = true, default-features = false }
clack-extensions = { workspace = true, features = ["log"] }

[lints]
workspace = true
