[package]
name = "clack-test-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-host = { workspace = true }
clack-extensions = { workspace = true, features = ["audio-ports", "params", "state", "clack-plugin"] }
selfie = { workspace = true }
