[package]
name = "clack-test-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-host = { workspace = true, default-features = false }
clack-extensions = { workspace = true, features = ["audio-ports", "params", "state", "clack-plugin"] }
selfie = { git = 'https://github.com/prokopyl/selfie', rev = '726013fc94835b6f24918ba822a49e5c3b2a3b25', version = "0.0.2" }
