[package]
name = "gain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap-plugin" = { path = "../.." }
"clap-audio-params" = { path = "../../params" }
"clap-audio-core" = { path = "../../core" }

[dev-dependencies]
clap-sys = { git = "https://github.com/glowcoil/clap-sys" }
host = { path = "../../host" }
clap-audio-core = { path = "../../core" }
