[package]
name = "clack-discover"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clack-host = { workspace = true, features = ["default"] }
clack-extensions = { workspace = true, features = ["clack-host", "preset-discovery"] }
clap-discovery = { workspace = true }
clap = { version = "=4.4", features = ["derive"] } # 4.4.x is latest for MSRV 1.70
rayon = "1.7.0"
walkdir = "2.5.0"
