[package]
name = "clack-plugin-gain-presets"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = ["audio-ports", "params", "state", "clack-plugin", "preset-discovery"] }

[dev-dependencies]
clack-host = { workspace = true, features = ["clack-plugin"] }
clack-extensions = { workspace = true, features = ["audio-ports", "params", "state", "clack-plugin", "clack-host"] }
