[package]
name = "gain"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = ["audio-ports", "params", "state", "clack-plugin", "clack-host"] }

[dev-dependencies]
clack-test-host = { workspace = true }
